# one-bot-at-a-time

./: .gitignore  AGENTS.md  ARCHITECTURE_DECISIONS.md  README.md  one-bot-at-a-time-colors.txt  trenkwalder-project-brief.md
.github/workflows/: ci.yml  staging-alias.yml
.sisyphus/: boulder.json
.sisyphus/plans/: frontend-redesign.md
frontend/: README.md  instrumentation-client.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/chat/stream/: route.ts
frontend/app/api/documents/: route.ts
frontend/app/mock-data/: page.tsx
frontend/components/chat/: ChatContainer.tsx  ChatMessageList.tsx  ChatSidebar.tsx  ConversationHeader.tsx  InputBar.tsx  MessageBubble.tsx  chat-types.ts
frontend/components/layout/: work-in-progress-page.tsx
frontend/components/ui/: button.tsx
frontend/lib/: backend.ts  demo-prompts.ts  server-rate-limit.ts
frontend/types/: index.ts
services/: .env.example  Makefile  docker-compose.yml  hr_data.db  pyproject.toml  rag_data.db
services/chat-orchestrator/: .env.example  Dockerfile  fly.toml  main.py  pyproject.toml  requirements.txt
services/chat-orchestrator/src/chat_orchestrator/: __init__.py  config.py  main.py  runtime.py
services/chat-orchestrator/src/chat_orchestrator/routers/: chat.py
services/chat-orchestrator/src/chat_orchestrator/services/: chat_service.py  conversation.py  llm_router.py  rate_limit.py  streaming.py  tool_executor.py
services/chat-orchestrator/src/chat_orchestrator/tools/: base.py  hr_tool.py  rag_tool.py  registry.py
services/chat-orchestrator/src/shared/middleware/: logging.py
services/chat-orchestrator/src/shared/models/: chat.py  tools.py
services/chat-orchestrator/src/shared/utils/: health.py
services/chat-orchestrator/tests/: test_chat.py  test_chat_service_unit.py  test_llm_router.py  test_state_services.py  test_tool_executor.py
services/hr-service/: .env.example  Dockerfile  fly.toml  main.py  pyproject.toml  requirements.txt  vercel.json
services/hr-service/src/hr_service/: __init__.py  config.py  main.py
services/hr-service/src/hr_service/database/: __init__.py  connection.py  models.py  seed.py
services/hr-service/src/hr_service/routers/: employees.py  org.py  salary.py  timetracking.py  vacation.py
services/hr-service/src/hr_service/services/: hr_data.py
services/hr-service/src/shared/middleware/: auth.py  cors.py  logging.py
services/hr-service/tests/: test_hr.py  test_hr_data.py
services/rag-service/: .env.example  .vercelignore  Dockerfile  fly.toml  main.py  pyproject.toml  requirements.txt
services/rag-service/src/rag_service/: __init__.py  config.py  main.py  runtime.py
services/rag-service/src/rag_service/database/: __init__.py  connection.py  models.py
services/rag-service/src/rag_service/routers/: documents.py  ingest.py  search.py
services/rag-service/src/rag_service/services/: chunker.py  document_loader.py  embedder.py  vector_store.py
services/rag-service/src/shared/: main.py
services/rag-service/src/shared/middleware/: auth.py  cors.py
services/rag-service/src/shared/models/: __init__.py
services/rag-service/tests/: test_document_processing.py  test_rag.py
services/shared/: main.py  pyproject.toml
services/shared/src/shared/: __init__.py  config.py
services/shared/src/shared/middleware/: __init__.py  logging.py
services/shared/src/shared/models/: chat.py
services/shared/src/shared/utils/: __init__.py
services/shared/tests/: test_models.py  test_vercel_entrypoints.py
