[project]
name = "chat-orchestrator"
version = "0.1.0"
description = "Chat Orchestrator — LLM routing, tool use, and streaming for Trenkwalder AI"
requires-python = ">=3.13"
dependencies = [
    "shared",
    "fastapi>=0.135",
    "openai>=2.30",
    "pydantic>=2.12",
    "pydantic-settings>=2.8",
    "redis>=7.1",
    "httpx>=0.28",
    "sse-starlette>=2.2",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chat_orchestrator"]
