[project]
name = "hr-service"
version = "0.1.0"
description = "HR Service — mock external HR API for Trenkwalder AI"
requires-python = ">=3.13"
dependencies = [
    "shared",
    "fastapi>=0.135",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.21",
    "asyncpg>=0.30",
    "faker>=33.0",
    "pydantic>=2.12",
    "pydantic-settings>=2.8",
    "greenlet>=3.2",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hr_service"]
