[project]
name = "rag-service"
version = "0.1.0"
description = "RAG Service — document ingestion, embedding, and semantic search"
requires-python = ">=3.13"
dependencies = [
    "shared",
    "aiosqlite>=0.21",
    "asyncpg>=0.30",
    "fastapi>=0.135",
    "openai>=2.30",
    "chromadb>=1.5",
    "greenlet>=3.2",
    "pypdf>=5.5",
    "pydantic>=2.12",
    "pydantic-settings>=2.8",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.22",
]

[tool.uv.sources]
shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_service"]
