[project]
name = "shared"
version = "0.1.0"
description = "Shared models, config, and middleware for Trenkwalder AI services"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135",
    "pydantic>=2.12",
    "pydantic-settings>=2.8",
    "uvicorn[standard]>=0.42",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
